<?xml version="1.0"?>
<package>
    <name>adlink_msgs</name>
    <version>0.0.0</version>
    <description>The ROS 1.0 msgs for ADLINK Applications</description>
    <maintainer email="haochih.lin@adlinktech.com">HaoChih, Lin</maintainer>
    <license>Apache 2.0</license>
    <!-- <url type="website">http://wiki.ros.org/adlink_ddsbot</url> -->

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    
</package>
